--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,14 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   intl: ^0.19.0
+  retrofit: ^4.4.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^9.1.5
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
