--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.19.0
   retrofit: ^4.4.1
   shared_preferences: ^2.3.3
 
 dev_dependencies:
   build_runner: ^2.4.13
+  hive_generator: ^2.0.1
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
